--- a/BluetoothUwpDesktop/packages.config
+++ b/BluetoothUwpDesktop/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="Serilog" version="2.6.0" targetFramework="net461" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
 </packages>
