--- a/BluetoothUwpDesktop/packages.config
+++ b/BluetoothUwpDesktop/packages.config
@@ -3,4 +3,6 @@
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="Serilog" version="2.6.0" targetFramework="net461" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net461" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.Trace" version="2.1.0" targetFramework="net461" />
 </packages>
