--- a/MyidBluetoothCredentialProvider/MyidBluetoothCredentialProvider.csproj
+++ b/MyidBluetoothCredentialProvider/MyidBluetoothCredentialProvider.csproj
@@ -41,6 +41,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Headspring\Enumeration.cs" />
     <Compile Include="HResultValues.cs" />
     <Compile Include="IMyidBluetoothCredentialProvider.cs" />
     <Compile Include="IMyidBluetoothWindowsCredentialProviderTile.cs" />
@@ -56,6 +60,7 @@
     <Compile Include="MyidBluetoothWindowsCredentialProviderTile.cs" />
     <Compile Include="PInvoke.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UiBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BluetoothUwpDesktop\BluetoothUwpDesktop.csproj">
@@ -65,6 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Headspring\LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
