--- a/KeyStorageProvider/PhoneKSP/PhoneKSP.vcxproj
+++ b/KeyStorageProvider/PhoneKSP/PhoneKSP.vcxproj
@@ -65,20 +65,20 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_UML|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)$(VC)\$(ProjectName)\$(Configuration)$(PlatformSuffix)\</OutDir>
-    <IntDir>$(OutDir)$(ProjectName)\Obj</IntDir>
+    <IntDir>$(OutDir)$(ProjectName)\Obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_UML|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)$(VC)\$(ProjectName)\$(Configuration)$(PlatformSuffix)\</OutDir>
-    <IntDir>$(OutDir)$(ProjectName)\Obj</IntDir>
+    <IntDir>$(OutDir)$(ProjectName)\Obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_UML|Win32'">
     <OutDir>$(SolutionDir)$(VC)\$(ProjectName)\$(Configuration)$(PlatformSuffix)\</OutDir>
-    <IntDir>$(OutDir)$(ProjectName)\Obj</IntDir>
+    <IntDir>$(OutDir)$(ProjectName)\Obj\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_UML|x64'">
     <OutDir>$(SolutionDir)$(VC)\$(ProjectName)\$(Configuration)$(PlatformSuffix)\</OutDir>
-    <IntDir>$(OutDir)$(ProjectName)\Obj</IntDir>
+    <IntDir>$(OutDir)$(ProjectName)\Obj\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_UML|Win32'">
     <Link>
